--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <h1>Guess the Color!</h1>
             <h4>How colorful are you...</h4>
         </div>
+        <div id="best"></div>
             
         <!--Don't be a cheater!-->
         
@@ -23,7 +24,8 @@
             <div id="color-preview"></div>
             <button class="btn" id="submit">Submit</button>
         </div>
-
+        <br>
+        <div id="comparison"></div>
         <div id="reset">
             <button class="btn" id="reset-btn">New Color</button>
         </div>
